[tool.poetry]
name = "person-gen"
version = "0.1.0"
description = ""
authors = ["hoommoos <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.1.0"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
